# ManualCall

./: CLAUDE.md  ManualCall_plan.md  README.md  pyproject.toml
app/: config.py  constants.py  main.py
app/routers/: media_stream.py  twiml.py
app/services/: audio_converter.py  audit_logger.py  gemini_live.py  rag_service.py
data/: manual_chunks.json
tests/: test_twiml.py
tests/services/: test_audio_converter.py  test_audit_logger.py  test_gemini_live.py  test_rag_service.py
